--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
+          - run : npm install
 workflows:
     build-and-test:
       jobs:
