--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
 jobs:
-  build-and-test:
+  my-first-job:
     executor:
       name: node/default
     steps:
@@ -13,4 +13,4 @@ jobs:
 workflows:
     welcome:
       jobs:
-        - build-and-test
+        - my-first-job
